Avoid tooltips being visible, with js and pre-tooltip init

--- a/stylesheets/components/common/_field-tooltip.scss
+++ b/stylesheets/components/common/_field-tooltip.scss
@@ -13,3 +13,7 @@
     }
   }
 }
+
+.js .field-tooltip--jshide {
+  @include visually-hidden;
+}
